test/functions/ferguson/set-const-this.good
set-const-this.chpl:4: In method 'f':
set-const-this.chpl:6: error: cannot assign to const variable
  set-const-this.chpl:13: called as (R(int(64))).f()
